fixed alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,8 @@ body {
     background: var(--background);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+html.dark body {
+    color: var(--foreground);
+    background: var(--background);
+}
